<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">LitePipe</string>
    <string name="app_description">A lightweight webview wrapper for YouTube with advanced features.</string>
    <string name="version">Version: %1$s</string>
    <string name="about">About</string>
    <string name="source_code">Source Code</string>
    <string name="source_link">https://github.com/CodeLab-SK/LitePipe</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="checking_for_updates">Checking for updates…</string>
    <string name="no_updates_available">You are using the latest version</string>
    <string name="failed_to_check_for_updates">Failed to check for updates</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_cache_confirmation">Clear all cached data?</string>
    <string name="cache_cleared">Cache cleared successfully</string>
    <string name="export_error_log">Export Logs</string>
    <string name="failed_to_export_log">Failed to export logs</string>
    <string name="debug_info_copied">Debug info copied to clipboard</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="open_by_default_title">Open YouTube Links</string>
    <string name="open_by_default_message">Open Youtube links by Default</string>
    <string name="open_by_default_settings">Allow</string>
    <string name="open_by_default_later">Later</string>
    <string name="tutorial_open_links_title">Open by Default</string>
    <string name="tutorial_next">Next</string>
    <string name="tutorial_back">Back</string>
    <string name="tutorial_skip">Skip</string>
    <string name="tutorial_finish">Open Settings</string>
    <string name="tutorial_step_12_1">1. Enable the \"Open supported links\" switch.</string>
    <string name="tutorial_step_12_2">2. Tap \"Add link\" and select all youtube.com links to verify them.</string>
    <string name="tutorial_step_legacy_1">1. Tap on \"Open by default\" in the App settings.</string>
    <string name="tutorial_step_legacy_2">2. Set \"Open supported links\" to \"Open in this app\" or \"Ask every time\".</string>
    <string name="error_title">Error</string>
    <string name="application_not_found">Application not found</string>
    <string name="file_not_found">File not found</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="copy">Copy</string>
    <string name="video_options">Video Options</string>
    <string name="clear">Clear</string>
    <string name="change">Change</string>
    <string name="info">Info</string>
    <string name="restart">Restart</string>
    <string name="nav_home">Home</string>
    <string name="nav_music">Music</string>
    <string name="nav_shorts">Shorts</string>
    <string name="nav_subscriptions">Subscriptions</string>
    <string name="nav_history">History</string>
    <string name="nav_playlists">Playlists</string>
    <string name="nav_library">Library</string>
    <string name="nav_downloads">Downloads</string>
    <string name="nav_settings">Settings</string>
    <string name="video">Video</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="share">Share</string>
    <string name="share_thumbnail">Share Thumbnail</string>
    <string name="failed_to_download_thumbnail">Failed to download image</string>
    <string name="return_dislike">Return Dislikes</string>
    <string name="long_press_context_menu">Long press context menu</string>
    <string name="action_share">Share</string>
    <string name="action_remix">Remix</string>
    <string name="action_download">Download</string>
    <string name="action_chat">Chat</string>
    <string name="action_thanks">Thanks</string>
    <string name="action_clip">Clip</string>
    <string name="action_save">Save</string>
    <string name="action_report">Report</string>
    <string name="action_ask_ai">Ask AI</string>
    <string name="action_like_dislike">Like/Dislike</string>
    <string name="player">Player</string>
    <string name="use_webview_player">Use WebView Player</string>
    <string name="offline_player">Offline Player</string>
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_replay">Replay</string>
    <string name="action_previous">Previous Video</string>
    <string name="action_next">Next Video</string>
    <string name="action_fullscreen">Fullscreen</string>
    <string name="action_restore_watch">Return to video</string>
    <string name="hint_seek_plus">+%1$ds</string>
    <string name="hint_seek_minus">-%1$ds</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="unlock_screen">Unlock screen</string>
    <string name="playback_end_next">Play next</string>
    <string name="playback_end_loop">Loop video</string>
    <string name="playback_end_pause">Pause at end</string>
    <string name="playback_end_playlist_random">Playlist shuffle</string>
    <string name="subtitles">Captions</string>
    <string name="subtitles_on">Captions on</string>
    <string name="subtitles_off">Captions off</string>
    <string name="no_subtitles">No captions</string>
    <string name="video_quality">Video Quality</string>
    <string name="quality">Quality</string>
    <string name="audio_only">Audio</string>
    <string name="speed">Speed</string>
    <string name="speed_0_25x">0.25x</string>
    <string name="speed_0_5x">0.5x</string>
    <string name="speed_0_75x">0.75x</string>
    <string name="speed_normal">Normal</string>
    <string name="speed_1_25x">1.25x</string>
    <string name="speed_1_5x">1.5x</string>
    <string name="speed_1_75x">1.75x</string>
    <string name="speed_2_0x">2.0x</string>
    <string name="speed_3_0x">3.0x</string>
    <string name="speed_4_0x">4.0x</string>
    <string name="loop">Playback Mode</string>
    <string name="more_options">MORE OPTIONS</string>
    <string name="audio_track">Audio Track</string>
    <string name="resize_mode">Resize Mode</string>
    <string name="resize_fit">Fit</string>
    <string name="resize_fill">Fill</string>
    <string name="resize_zoom">Zoom</string>
    <string name="resize_fixed_width">Fixed width</string>
    <string name="resize_fixed_height">Fixed height</string>
    <string name="subtitle_style">Subtitle Style</string>
    <string name="bitrate">Bitrate</string>
    <string name="dropped_frames">Dropped Frames</string>
    <string name="resolution">Resolution</string>
    <string name="video_format">Video Format</string>
    <string name="audio_format">Audio Format</string>
    <string name="fps">FPS</string>
    <string name="failed_to_load_video_details">Failed to load video details</string>
    <string name="Queue">Playback Queue</string>
    <string name="queue_title_with_count">Playback Queue (%1$d)</string>
    <string name="Clear">Clear</string>
    <string name="no_queue_items">No queue items</string>
    <string name="queue_item_adding">Adding to queue</string>
    <string name="queue_item_added">Added to queue</string>
    <string name="queue_item_removed">Removed from queue</string>
    <string name="queue_item_unavailable">Couldn\'t get video Info</string>
    <string name="queue_unknown_author">Unknown author</string>
    <string name="remove_queue_item">Remove queue item</string>
    <string name="remove_queue_item_confirmation">Remove this queue item?</string>
    <string name="clear_queue_confirmation">Clear playback queue?</string>
    <string name="remove_from_queue">Remove from Queue</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="end_of_queue">End of queue</string>
    <string name="next">"Next:"</string>
    <string name="download">Download</string>
    <string name="downloads_default_title">Downloads</string>
    <string name="download_history">Downloads</string>
    <string name="no_download_records">No Downloads yet…</string>
    <string name="download_location">Download Location</string>
    <string name="max_concurrent_downloads">Max Concurrent Downloads</string>
    <string name="download_clipboard_detection">Clipboard Link Detection</string>
    <string name="download_clipboard_detection_desc">Detect copied links for downloading</string>
    <string name="download_clipboard_popup_title">Link Detected</string>
    <string name="download_clipboard_popup_msg">You have copied a link:\n\n%1$s\n\nWhat would you like to do?</string>
    <string name="download_clipboard_notification_title">YouTube Link Copied</string>
    <string name="download_clipboard_notification_msg">Tap to download or play: %1$s</string>
    <string name="preparing_download">Preparing download…</string>
    <string name="fetching_details">Fetching details…</string>
    <string name="select_something_first">Select something to download</string>
    <string name="status_queued">Queued</string>
    <string name="status_downloading">Downloading</string>
    <string name="status_paused">Paused</string>
    <string name="status_merging">Merging</string>
    <string name="status_completed">Downloaded</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="status_failed">Failed</string>
    <string name="download_progress_with_total">%1$s / %2$s MB (%3$d%%)</string>
    <string name="download_progress_simple">%1$s MB</string>
    <string name="filename">Filename</string>
    <string name="videos_count">%1$d videos</string>
    <string name="type_video">Video</string>
    <string name="type_audio">Audio</string>
    <string name="type_subtitle">Subtitle</string>
    <string name="type_thumbnail">Thumbnail</string>
    <string name="type_playlist">Playlist</string>
    <string name="delete_local_file">Delete local file</string>
    <string name="delete_local_files">Delete local files</string>
    <string name="clear_history">Clear history</string>
    <string name="litepipe_settings">LitePipe Settings</string>
    <string name="search_settings">Search settings…</string>
    <string name="general">General</string>
    <string name="show_search_suggestions">Search Suggestions</string>
    <string name="hide_comments">Hide Comments</string>
    <string name="update_dialog_title">New Update Available</string>
    <string name="update_dialog_message">A new version (%1$s) of LitePipe is available. Would you like to update?</string>
    <string name="update">Update</string>
    <string name="downloading_update">Downloading update…</string>
    <string name="install">Install</string>
    <string name="custom_navigation">Navigation Bar</string>
    <string name="hide_nav_bar_labels">Hide Navigation Labels</string>
    <string name="player_gestures">Gestures</string>
    <string name="brightness">Brightness</string>
    <string name="volume">Volume</string>
    <string name="Seek">Seek</string>
    <string name="remember_last_position">Resume Playback</string>
    <string name="remember_resize_mode">Remember Resize Mode</string>
    <string name="default_quality">Default Video Quality</string>
    <string name="default_playback_speed">Default Playback Speed</string>
    <string name="player_quality_auto">Auto</string>
    <string name="background_play">Background Playback</string>
    <string name="background_play_desc">Continue audio in the background</string>
    <string name="pip">Picture-in-Picture</string>
    <string name="shorts">Shorts</string>
    <string name="sponsorblock">SponsorBlock</string>
    <string name="threads">Threads</string>
    <string name="reset">Reset</string>
    <string name="splash_tagline_simple">Simple</string>
    <string name="splash_tagline_fast">Fast</string>
    <string name="splash_premium_experience">Premium Experience</string>
    <string name="splash_dot">\u2022</string>
</resources>